--- a/assets/scss/createproject.scss
+++ b/assets/scss/createproject.scss
@@ -14,7 +14,7 @@
         h2 {
           margin: 0 0 30px;
           padding: 0;
-          color: #fff;
+          color: rgb(247, 165, 165);
           text-align: center;
         }
         .user-box {
@@ -32,7 +32,7 @@
             &:focus ~ label,&:valid ~ label{
                 top: -20px;
                 left: 0;
-                color: #03e9f4;
+                color: #a5eff3;
                 font-size: 12px;
             }
           }
@@ -74,14 +74,21 @@
           position: relative;
           display: inline-block;
           padding: 10px 20px;
-          color: gray;
           font-size: 16px;
           text-decoration: none;
-          text-transform: uppercase;
           overflow: hidden;
           transition: .5s;
-          margin-top: 40px;
-          letter-spacing: 4px
+          letter-spacing: 4px;
+          color: white;
+          border-radius: 30px;
+          background: #e35151;
+          border: none;
+          box-shadow: -4px 5px 8px 0px #252828;
+          font-family: 'Indie Flower', cursive;
+        }
+        .SubmitBtn{
+          display: flex;
+          justify-content: center;
         }
       }  
 }
