--- a/views/createproject.ejs
+++ b/views/createproject.ejs
@@ -4,20 +4,20 @@
         <h2>Create New Project</h2>
         <form action="/project/create" method="post">
             <div class="user-box">
-                <input type="text" name="projectname" id="" required>
+                <input type="text" name="projectname" autocomplete="off" id="" required>
                 <label>Name of project</label>
             </div>
             <div class="user-box">
-                <input type="text" name="projectdescription" id="" required>
+                <input type="text" name="projectdescription" autocomplete="off" id="" required>
                 <label>Description of project</label>
             </div>
             <div class="user-box">
-                <input type="text" name="projectauthor" id="" required>
+                <input type="text" name="projectauthor" autocomplete="off" id="" required>
                 <label>Author of project</label>
             </div>
-            <a href="#">
+            <div class="SubmitBtn">
             <input type="submit" value="Create a project">
-            </a>
+            </div>
         </form>       
       </div>
 </div>
