--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,23 +2,25 @@
   width: 100%; }
   #main-page h1 {
     text-align: center;
-    font-size: 45px; }
+    font-size: 45px;
+    text-shadow: -6px 7px 5px #00000096; }
   #main-page table {
     margin: auto;
-    font-family: sans-serif; }
+    font-family: Papyrus; }
     #main-page table thead {
       font-size: 26px;
       background-color: rgba(0, 0, 0, 0.5);
-      color: white; }
+      color: #e5a6a6;
+      box-shadow: -1px 4px 8px 4px #1f2020; }
     #main-page table th, #main-page table td {
       padding: 10px;
-      text-align: center;
-      border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
+      text-align: center; }
     #main-page table td {
       font-size: 20px;
-      text-transform: capitalize; }
+      text-transform: capitalize;
+      border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
     #main-page table #showIssue {
       cursor: pointer; }
       #main-page table #showIssue a {
         text-decoration: none;
-        color: blueviolet; }
+        color: #d67575; }
