--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,17 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background: #F0A11A;
+  font-family: cursive;
+  background: #262524;
   overflow: hidden; }
-  body #main .border {
-    padding: 400px;
-    background: linear-gradient(30deg, #f0a11a 17%, rgba(90, 172, 105, 0.75) 36%, #5aac69 47%, #f0a11a 51%, rgba(90, 172, 105, 0.75) 70%, #f0a11a 90%);
-    border-radius: 20%;
-    opacity: 80%; }
   body #main .frame {
     position: absolute;
-    display: flex;
     top: 18%;
     left: 7%;
     height: 550px;
@@ -19,6 +13,7 @@ body {
     margin-inline: auto;
     border-radius: 20px;
     overflow: hidden;
-    background: radial-gradient(circle at 50% 50%, #FD9600 0%, #F7A300 46%, #E5AC03 100%);
-    box-shadow: 13px 13px 17px #5c4501, -1px -1px 17px #ffff05;
-    font-family: 'Indie Flower', cursive; }
+    background: #fff1f147;
+    box-shadow: 13px 13px 17px #000000, -1px -1px 17px #565656;
+    font-family: 'Indie Flower', cursive;
+    color: #f3d5af; }
