--- a/assets/css/projectdetailpage.css
+++ b/assets/css/projectdetailpage.css
@@ -9,14 +9,16 @@
     #show-data #report-issue a {
       text-decoration: none;
       font-size: 24px;
-      color: blueviolet; }
+      color: #edc0c0;
+      text-shadow: -5px 5px 6px #0000009e; }
   #show-data #project-data {
     width: 50%;
     display: inline;
     margin: 0; }
     #show-data #project-data h2 {
       text-align: center;
-      margin-left: 170px; }
+      margin-left: 170px;
+      color: #f7a5a5; }
     #show-data #project-data table {
       margin: auto;
       text-transform: capitalize;
@@ -27,11 +29,14 @@
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    background-color: red;
+    background-color: #c53e3e;
     text-align: center;
-    color: whitesmoke;
-    margin-top: -13%;
-    margin-left: 10%; }
+    color: #f9eeee;
+    margin-top: -12%;
+    margin-left: 11%;
+    margin-bottom: 8px;
+    font-family: cursive;
+    box-shadow: -4px 5px 8px 0px #222424; }
     #show-data .circle p {
       font-size: 30px;
       position: absolute;
@@ -66,7 +71,7 @@
             #show-data section #search-section .create-box .user-box input:focus ~ label, #show-data section #search-section .create-box .user-box input:valid ~ label {
               top: -10px;
               left: 0;
-              color: #03e9f4;
+              color: #b7edf0;
               font-size: 12px; }
           #show-data section #search-section .create-box .user-box label {
             position: absolute;
@@ -99,25 +104,34 @@
           text-align: center;
           display: inline-block;
           padding: 8px 20px;
-          color: gray;
           font-size: 16px;
           text-decoration: none;
           text-transform: uppercase;
           overflow: hidden;
           transition: .5s;
           margin-left: 150px;
-          letter-spacing: 4px; }
+          letter-spacing: 4px;
+          color: white;
+          border-radius: 30px;
+          background: #e35151;
+          border: none;
+          box-shadow: -4px 5px 8px 0px #252828;
+          font-family: 'Indie Flower', cursive; }
     #show-data section #show-issue {
       width: 60%;
       height: 100%; }
-      #show-data section #show-issue table th {
-        font-size: 26px;
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white; }
-      #show-data section #show-issue table th, #show-data section #show-issue table td {
-        text-transform: capitalize;
-        padding: 10px 38px;
-        border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
+      #show-data section #show-issue table {
+        font-family: Papyrus; }
+        #show-data section #show-issue table th {
+          font-size: 26px;
+          background-color: rgba(0, 0, 0, 0.5);
+          color: #e5a6a6;
+          box-shadow: -1px 4px 8px 4px #1f2020; }
+        #show-data section #show-issue table th, #show-data section #show-issue table td {
+          text-transform: capitalize;
+          padding: 10px 38px; }
+        #show-data section #show-issue table td {
+          border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
 
 #filter-data {
   font-family: sans-serif;
@@ -125,19 +139,22 @@
   #filter-data h1 {
     text-align: center;
     font-size: 40px;
-    font-weight: bolder; }
+    font-weight: bolder;
+    color: #f7a5a5; }
   #filter-data table {
     margin: auto;
-    padding: 10px; }
+    padding: 10px;
+    font-family: Papyrus; }
     #filter-data table th {
       font-size: 20px;
       text-transform: capitalize;
-      background-color: rgba(0, 0, 0, 0.7);
-      color: whitesmoke; }
+      background-color: rgba(0, 0, 0, 0.5);
+      color: #e5a6a6;
+      box-shadow: -1px 4px 8px 4px #1f2020; }
     #filter-data table th, #filter-data table td {
-      padding: 10px 70px;
-      border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
+      padding: 10px 70px; }
     #filter-data table td {
       font-size: 16px;
       font-size: 20px;
-      text-transform: capitalize; }
+      text-transform: capitalize;
+      border-bottom: solid 1px rgba(255, 255, 255, 0.3); }
