--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -4,29 +4,31 @@
     h1{
         text-align: center;
         font-size: 45px;
+        text-shadow: -6px 7px 5px #00000096;
     }
     table{
         margin: auto;
-        font-family: sans-serif;
+        font-family: Papyrus;
         thead{
             font-size: 26px;
-            background-color: rgba(0,0,0,.5);;
-            color: white;
+            background-color: rgba(0,0,0,.5);
+            color: #e5a6a6;
+            box-shadow: -1px 4px 8px 4px #1f2020;
         }
         th,td{
             padding: 10px;
             text-align: center;
-            border-bottom: solid 1px rgba(255,255,255,0.3);
         }
         td{
             font-size: 20px;
             text-transform: capitalize;
+            border-bottom: solid 1px rgba(255,255,255,0.3);
         }
         #showIssue{
             cursor: pointer;
             a{
                 text-decoration: none;
-                color: blueviolet;
+                color: rgb(214, 117, 117);
             }
         }
     }
