--- a/assets/scss/projectdetailpage.scss
+++ b/assets/scss/projectdetailpage.scss
@@ -10,7 +10,8 @@
         a{
             text-decoration: none;
             font-size: 24px;
-            color: blueviolet;
+            color: #edc0c0;
+            text-shadow: -5px 5px 6px #0000009e;
         }
     }
     #project-data{
@@ -20,6 +21,7 @@
         h2{
             text-align: center;
             margin-left: 170px;
+            color: rgb(247, 165, 165);
         }
         table{
             margin: auto;
@@ -34,11 +36,14 @@
         height: 150px;
         width: 150px;
         border-radius: 50%;
-        background-color: red   ;
+        background-color: #c53e3e;
         text-align: center;
-        color: whitesmoke;
-        margin-top:-13%;
-        margin-left: 10%;
+        color: #f9eeee;
+        margin-top: -12%;
+        margin-left: 11%;
+        margin-bottom: 8px;
+        font-family: cursive;
+        box-shadow: -4px 5px 8px 0px #222424;
         p{ 
             font-size: 30px;
             position: absolute;
@@ -77,7 +82,7 @@
                     &:focus ~ label,&:valid ~ label{
                         top: -10px;
                         left: 0;
-                        color: #03e9f4;
+                        color: #b7edf0;
                         font-size: 12px;
                     }
                   }
@@ -120,14 +125,19 @@
                   text-align: center;
                   display: inline-block;
                   padding: 8px 20px;
-                  color: gray;
                   font-size: 16px;
                   text-decoration: none;
                   text-transform: uppercase;
                   overflow: hidden;
                   transition: .5s;
                   margin-left: 150px;
-                  letter-spacing: 4px
+                  letter-spacing: 4px;
+                  color: white;
+                  border-radius: 30px;
+                  background: #e35151;
+                  border: none;
+                  box-shadow: -4px 5px 8px 0px #252828;
+                  font-family: 'Indie Flower', cursive;
                 }
               } 
         }
@@ -135,14 +145,18 @@
             width: 60%;
             height: 100%;
             table{
+                font-family: Papyrus;
                 th{
                     font-size: 26px;
-                    background-color: rgba(0,0,0,.5);;
-                    color: white;
+                    background-color: rgba(0,0,0,.5);
+                    color: #e5a6a6;
+                    box-shadow: -1px 4px 8px 4px #1f2020;
                 }
                 th,td{
                     text-transform: capitalize;
                     padding: 10px 38px;
+                }
+                td{
                     border-bottom: solid 1px rgba(255,255,255,0.3);
                 }
             }
@@ -160,24 +174,27 @@
         text-align: center;
         font-size: 40px;
         font-weight: bolder;
+        color: rgb(247, 165, 165);
     }
     table{
         margin: auto;
         padding: 10px;
+        font-family: Papyrus;
         th{
             font-size: 20px;
             text-transform: capitalize;
-            background-color:rgba(0, 0, 0, 0.7);
-            color: whitesmoke;
+            background-color: rgba(0,0,0,.5);
+            color: #e5a6a6;
+            box-shadow: -1px 4px 8px 4px #1f2020;
         }
         th,td{
             padding: 10px 70px;
-            border-bottom: solid 1px rgba(255,255,255,0.3);
         }
         td{
             font-size: 16px;
             font-size: 20px;
             text-transform: capitalize;
+            border-bottom: solid 1px rgba(255,255,255,0.3);
         }
     }
 }
