--- a/views/issuePage.ejs
+++ b/views/issuePage.ejs
@@ -3,18 +3,18 @@
         <h2>Report Issue</h2>
         <form action="/issue/create" method="post">
             <div class="user-box">
-                <input type="text" name="title" required>
+                <input type="text" name="title" autocomplete="off" required>
                 <label>Issue Title</label>
             </div>
             <div class="user-box">
-                <input type="text" name="description" required>
+                <input type="text" name="description" autocomplete="off" required>
                 <label>Issue Description</label>
             </div>
             <div class="user-box">
-                <input type="text" name="author" required>
+                <input type="text" name="author" autocomplete="off"  required>
                 <label>Author Name</label>
             </div>
-            <input type="hidden" name="projectRef" value="<%= projectId %>">
+            <input type="hidden" name="projectRef"  value="<%= projectId %>">
             <div class="user-box">
                 <select name="labels" id="selectbox" required>
                     <option value="" disabled selected>Select Issue</option>
